<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@color/dialog_bg"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal">

        <com.common.view.DTextView
            android:id="@+id/dialogtitle"
            style="@style/txt_fff_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/app_name"
            app:textFontFace="LIGHT" />

        <com.common.view.DTextView
            android:id="@+id/dialogClear"
            style="@style/txt_fff_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/clear"
            android:visibility="gone"
            app:textFontFace="LIGHT" />

        <ImageView
            android:id="@+id/ivRowClose"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="end"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_close"
            android:background="?android:attr/selectableItemBackground"
            android:tint="@color/white" />
    </LinearLayout>

    <com.common.view.DEditText
        android:id="@+id/editSearch"
        style="@style/txt_333_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/black_rect_with_stroke"
        android:hint="@string/search"
        android:padding="@dimen/_7sdp"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        app:textFontFace="LIGHT" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_light_" />

    <ListView
        android:id="@+id/lvSpinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@color/list_devider"
        android:dividerHeight="1px"
        android:fadingEdge="none"
        android:fastScrollAlwaysVisible="false"
        android:fastScrollEnabled="true"
        android:listSelector="@color/gray_light__"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:listitem="@layout/spinner_sel_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:fontFamily="@font/roboto_condensed_bold"
            android:id="@+id/btnNegative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/gray_light_"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:fontFamily="@font/roboto_condensed_bold"
            android:id="@+id/btnPositive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/btn_ok"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>