<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.AddTodoItemActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="0dp"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|enterAlways">

            <include layout="@layout/topbar" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardBackgroundColor="@color/white"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivTodoItem"
                    android:src="@drawable/ic_add_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_134sdp"/>
            </androidx.cardview.widget.CardView>

            <com.common.view.DEditText
                android:id="@+id/edTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:hint="@string/title"
                android:background="@drawable/ed_bg"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:textFontFace="BOLD" />

            <com.common.view.DEditText
                android:id="@+id/edDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="10"
                android:maxLines="10"
                android:hint="@string/description"
                android:background="@drawable/ed_bg"
                android:padding="@dimen/_10sdp"
                android:layout_margin="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:textFontFace="BOLD" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.common.view.DButton
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/button_primary_dark_bg"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:textFontFace="BOLD"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_10sdp" />

                <com.common.view.DButton
                    android:id="@+id/btnDone"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/button_primary_dark_bg"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:textFontFace="BOLD"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
